--- a/CCM_New/Client/Shared/MainLayout.razor
+++ b/CCM_New/Client/Shared/MainLayout.razor
@@ -232,7 +232,7 @@ else
         {
             loginService.securityLevel = 10;
         }
-        if (loginService.session.user.UserRole.Trim() == "TPV")
+        if (loginService.session.user.UserRole.Trim() == "OD")
         {
             loginService.securityLevel = 20;
         }
