--- a/CCM_New/Client/Shared/NavMenu.razor
+++ b/CCM_New/Client/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
 @using Syncfusion.Blazor.Notifications
 
 <div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">CCM </a>
+    <a class="navbar-brand" href="">CCM</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,28 +20,32 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" @onclick="NavClaim">
-                <span class="oi oi-plus" aria-hidden="true"></span> CCM
+            <NavLink class="nav-link"  @onclick="NavClaim" style="cursor : pointer" >
+                <span class="oi oi-plus" aria-hidden="true"></span> CCM claims
             </NavLink>
             @if (expandSubNavCCM)
             {
-
                 <NavLink class="nav-link" href="NewClaimPage" style="margin-left: 15px" >
                     <span class="oi oi-medical-cross" aria-hidden="true" style="align-self"></span> New Claim
                 </NavLink>
-            }
-            @if (expandSubNavCCMList)
-            {
                 <NavLink class="nav-link" href="ClaimListPage" style="margin-left: 15px">
                     <span class="oi oi-list" aria-hidden="true" style="align-self"></span> Claim list
                 </NavLink>
-                
             }
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" @onclick="NavDictionary">
-                <span class="oi oi-menu" aria-hidden="true"></span> Dictionary
-            </NavLink>
+            @if (loginService.securityLevel < 100)
+            {
+                <NavLink class="nav-link" @onclick="NavDictionary" style="cursor : not-allowed">
+                    <span class="oi oi-menu" aria-hidden="true"></span> Dictionary
+                </NavLink>
+            }
+            @if (loginService.securityLevel == 100)
+            {
+                <NavLink class="nav-link" @onclick="NavDictionary" style="cursor : pointer">
+                    <span class="oi oi-menu" aria-hidden="true"></span> Dictionary
+                </NavLink>
+            }
             @if (expandSubNavDictionary)
             {
                 <NavLink class="nav-link" href="CarriersPage" style="margin-left: 15px">
@@ -69,6 +73,8 @@
                     <span class="oi oi-spreadsheet" aria-hidden="true" style="align-self"></span> Users
                 </NavLink>
             }
+
+
         </li>
     </ul>
 </div>
@@ -92,24 +98,16 @@
 
     private void NavClaim()
     {
+        expandSubNavCCM = !expandSubNavCCM;
 
-        if (loginService.securityLevel >= 10)
-        {
-            expandSubNavCCM = !expandSubNavCCM;
-        }
-      
-        
 
-        if (loginService.securityLevel >= 20)
-        {
-            expandSubNavCCMList = !expandSubNavCCMList;
-        }
-  
+
     }
 
 
     private void NavDictionary()
     {
+        Console.WriteLine("Login service level ");
 
         if (loginService.securityLevel == 100)
         {
